--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,34 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Backend data
+backend/venv/
+backend/__pycache__/
+backend/*.pyc
+backend/*.db
+backend/*.json
+backend/.env
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Python
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
 
 # IDE
-.vscode
-.idea
+.vscode/
+.idea/
 *.swp
 *.swo
 *~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+*.bak
