--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,4 @@
-selenium>=4.15.0
-webdriver-manager>=4.0.1
-flask>=3.0.0
-flask-cors>=4.0.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-lxml>=4.9.3
+Flask==3.0.0
+Flask-CORS==4.0.0
+selenium==4.15.2
+requests==2.31.0
